// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/MainMenuActions should match snapshot in mobile view with some plugin and ability to click plugin 1`] = `
<div
  aria-label="main menu"
  className="a11y__popup Menu"
  role="menu"
>
  <ul
    className="Menu__content dropdown-menu"
    onClick={[Function]}
    style={Object {}}
  >
    <Memo(MenuGroup)>
      <MenuItemAction
        icon={
          <i
            className="mentions"
          >
            @
          </i>
        }
        id="recentMentions"
        onClick={[Function]}
        show={true}
        text="Recent Mentions"
      />
      <MenuItemAction
        icon={
          <i
            className="fa fa-bookmark"
          />
        }
        id="flaggedPosts"
        onClick={[Function]}
        show={true}
        text="Saved messages"
      />
    </Memo(MenuGroup)>
    <Memo(MenuGroup)>
      <MenuItemAction
        ariaLabel="Profile"
        icon={
          <i
            className="fa fa-cog"
          />
        }
        id="accountSettings"
        onClick={[Function]}
        show={true}
        text="Profile"
      />
    </Memo(MenuGroup)>
    <Memo(MenuGroup)>
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "manage_team",
          ]
        }
        teamId="someteamid"
      >
        <MenuItemToggleModalRedux
          dialogType={
            Object {
              "$$typeof": Symbol(react.memo),
              "WrappedComponent": [Function],
              "compare": null,
              "type": [Function],
            }
          }
          icon={
            <i
              className="fa fa-user-plus"
            />
          }
          id="addGroupsToTeam"
          modalId="add_groups_to_team"
          show={true}
          text="Add Groups to Team"
        />
      </Connect(TeamPermissionGate)>
    </Memo(MenuGroup)>
    <Memo(MenuGroup) />
    <Memo(MenuGroup)>
      <MenuItemAction
        id="someplugin_pluginmenuitem"
        key="someplugin_pluginmenuitem"
        onClick={[Function]}
        show={true}
        text="some plugin text"
      />
    </Memo(MenuGroup)>
    <Memo(MenuGroup)>
      <MenuItemLink
        id="integrations"
        show={true}
        text="Integrations"
        to="/somename/integrations"
      />
    </Memo(MenuGroup)>
    <Memo(MenuGroup)>
      <MenuItemAction
        icon={
          <i
            className="fa fa-sign-out"
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </Memo(MenuGroup)>
  </ul>
</div>
`;

exports[`plugins/MainMenuActions should match snapshot in web view 1`] = `
<div
  aria-label="team menu"
  className="a11y__popup Menu"
  role="menu"
>
  <ul
    className="Menu__content dropdown-menu"
    onClick={[Function]}
    style={Object {}}
  >
    <Memo(MenuGroup)>
      <Connect(SystemPermissionGate)
        permissions={
          Array [
            undefined,
          ]
        }
      >
        <MenuItemAction
          id="dashboardManager"
          onClick={[Function]}
          show={true}
          text="Tableau de bord"
        />
      </Connect(SystemPermissionGate)>
    </Memo(MenuGroup)>
    <Memo(MenuGroup)>
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "manage_team",
          ]
        }
        teamId="someteamid"
      >
        <MenuItemToggleModalRedux
          dialogType={
            Object {
              "$$typeof": Symbol(react.memo),
              "WrappedComponent": [Function],
              "compare": null,
              "type": [Function],
            }
          }
          id="addGroupsToTeam"
          modalId="add_groups_to_team"
          show={true}
          text="Add Groups to Team"
        />
      </Connect(TeamPermissionGate)>
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "manage_team",
          ]
        }
        teamId="someteamid"
      >
        <MenuItemToggleModalRedux
          dialogProps={
            Object {
              "teamID": "someteamid",
            }
          }
          dialogType={
            Object {
              "$$typeof": Symbol(react.memo),
              "WrappedComponent": [Function],
              "compare": null,
              "type": [Function],
            }
          }
          id="manageGroups"
          modalId="manage_team_groups"
          show={true}
          text="Manage Groups"
        />
      </Connect(TeamPermissionGate)>
    </Memo(MenuGroup)>
    <Memo(MenuGroup)>
      <MenuItemAction
        icon={false}
        id="someplugin_pluginmenuitem"
        key="someplugin_pluginmenuitem"
        onClick={[Function]}
        show={true}
        text="some plugin text"
      />
    </Memo(MenuGroup)>
    <Memo(MenuGroup)>
      <MenuItemLink
        id="integrations"
        show={true}
        text="Integrations"
        to="/somename/integrations"
      />
    </Memo(MenuGroup)>
  </ul>
</div>
`;
